Fixed overflowing code blocks.

--- a/public/md.css
+++ b/public/md.css
@@ -16,6 +16,7 @@ main md {
 md pre {
     padding: 16px;
     overflow: auto;
+    overflow-wrap: anywhere;
     font-size: 85%;
     line-height: 1.45;
     background-color: var(--bg-lighter);
